--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "ownerName": "SL-lahiya-MD",
     "instagram" : "https://instagram.com/zeeoneofc",
     "gcwa" : "https://instabio.cc/Alphabot",
-    "botName":ོ :" SL-lahiya-Md ",
+    "botName":ོ :"Haruka-md  ",
     "footer": "2023 © api.zeeoneofc.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
